# ros2_graph

./: .gitignore  CMakeLists.txt  README.md  build.sh  launch.sh  package.xml  ros2_graph
backend/: pyproject.toml  ros2_graph_backend.spec  ros2_graph_server.py  server_logging.py  test_layout_utils.py
docs/: RELEASE.md  TODO.md
scripts/: build_release.sh
webapp/: index.html  package-lock.json  package.json  vite.config.js
webapp/src/: App.css  App.jsx  index.css  main.jsx
webapp/src/__tests__/: layout.test.js
webapp/src/api/: ros2Api.js  topicMessageClient.js  websocketClient.js
webapp/src/components/: InfoPanel.css  InfoPanel.jsx  PointCloudViewer.css  PointCloudViewer.jsx  ROS2Node.css  ROS2Node.jsx  Toolbar.css  Toolbar.jsx  TopicNode.css  TopicNode.jsx
webapp/src/components/pointcloud/: DeckGLPointCloud.jsx  ReglPointCloud.jsx  ThreePointCloud.jsx
webapp/src/components/widgets/: SearchableDropdown.css  SearchableDropdown.jsx
webapp/src/utils/: layout.js
